--- a/public/main.css
+++ b/public/main.css
@@ -150,7 +150,7 @@ Lato:400,300|Oswald:400,300|Lora' rel='stylesheet' type='text/css'>https://fonts
     line-height: 1;
     text-align: center; }
   .Index footer {
-    margin-top: 45px;
+    margin: 22.5px 0;
     text-align: center; }
     .Index footer .socialMediaIcons-icon {
       border-radius: 5px; }
@@ -160,22 +160,22 @@ Lato:400,300|Oswald:400,300|Lora' rel='stylesheet' type='text/css'>https://fonts
       height: 2.25rem; }
     .Index-header {
       display: inline;
-      font-size: 1.125rem;
-      letter-spacing: 0.2625rem; }
+      font-size: 1.28rem;
+      letter-spacing: 0.28rem; }
     .Index-subheader {
-      font-size: 1.125rem;
-      letter-spacing: 0.2625rem; }
-    .Index iframe {
-      height: 4.8rem; }
+      font-size: 1.28rem;
+      letter-spacing: 0.28rem; }
     .Index-header {
       display: inline;
-      font-size: 0.84375rem;
-      letter-spacing: 0.19688rem; }
+      font-size: 1.024rem;
+      letter-spacing: 0.224rem; }
     .Index-subheader {
-      font-size: 0.84375rem;
-      letter-spacing: 0.19688rem; }
+      font-size: 1.024rem;
+      letter-spacing: 0.224rem; }
+    .Index iframe {
+      height: 68.34375; }
     .Index-info p {
-      font-size: 0.79475rem; }
+      font-size: 0.891rem; }
     .Index footer .socialMediaIcons-icon {
       width: 51.5865px;
       height: auto; } }
@@ -185,41 +185,50 @@ Lato:400,300|Oswald:400,300|Lora' rel='stylesheet' type='text/css'>https://fonts
       height: 45px; }
     .Index-header {
       display: inline;
-      font-size: 1.125rem;
-      letter-spacing: 0.2625rem; }
+      font-size: 1.28rem;
+      letter-spacing: 0.28rem; }
     .Index-subheader {
-      font-size: 1.125rem;
-      letter-spacing: 0.2625rem; }
+      font-size: 1.28rem;
+      letter-spacing: 0.28rem; }
+    .Index iframe {
+      height: 91.125; }
     .Index-info p {
-      font-size: 0.935rem; }
+      font-size: 0.99rem; }
     .Index footer .socialMediaIcons-icon {
       width: 60.69px;
       height: auto; } }
   @media only screen and (min-width: 556px) and (max-width: 809px) {
-    .Index-siteImage {
-      position: relative;
-      top: -1px;
-      height: 3.75rem; }
-    .Index-header {
-      display: inline-block;
-      /*font-size: 1.25rem;*/
-      font-size: 1.5rem;
-      /*letter-spacing: $mediumSpacing;*/
-      letter-spacing: 0.35rem; }
-      .Index-header h1 {
-        margin: 0.5625rem 0; }
-    .Index-subheader {
-      /*font-size: 1.25rem;*/
-      font-size: 1.5rem;
-      /*letter-spacing: 0.30rem;*/
-      letter-spacing: 0.35rem; }
-    .Index-info {
-      font-size: 1.1rem; }
-    .Index-voiceDemo {
-      width: 100%; }
-    .Index footer .socialMediaIcons-icon {
-      width: 71.4px;
-      height: auto; } }
+    .Index {
+      /*    &-voiceDemo {
+            width: 100%;
+          }
+      */ }
+      .Index-siteImage {
+        position: relative;
+        top: -1px;
+        height: 3.75rem; }
+      .Index-header {
+        display: inline-block;
+        /*font-size: 1.25rem;*/
+        font-size: 1.6rem;
+        /*letter-spacing: $mediumSpacing;*/
+        letter-spacing: 0.35rem; }
+        .Index-header h1 {
+          margin: 0.5625rem 0; }
+      .Index-subheader {
+        /*font-size: 1.25rem;*/
+        font-size: 1.6rem;
+        /*letter-spacing: 0.30rem;*/
+        letter-spacing: 0.35rem; }
+      .Index iframe {
+        height: 121.5; }
+      .Index iframes {
+        height: 6.4rem; }
+      .Index-info {
+        font-size: 1.1rem; }
+      .Index footer .socialMediaIcons-icon {
+        width: 71.4px;
+        height: auto; } }
   @media only screen and (min-width: 810px) {
     .Index-siteImage {
       top: -1.5px;
@@ -231,10 +240,10 @@ Lato:400,300|Oswald:400,300|Lora' rel='stylesheet' type='text/css'>https://fonts
     .Index-subheader {
       font-size: 2rem;
       letter-spacing: 0.35rem; }
+    .Index iframe {
+      height: 162; }
     .Index-info {
       font-size: 1.1rem; }
-    .Index-voiceDemo {
-      padding: 0 15px; }
     .Index footer .socialMediaIcons-icon {
       width: 84px;
       height: auto; }
