--- a/public/main.scss
+++ b/public/main.scss
@@ -187,8 +187,8 @@ Lato:400,300|Oswald:400,300|Lora' rel='stylesheet' type='text/css'>https://fonts
     /*font-weight: 300;*/
     padding: 0.5rem 0;
     margin-bottom: 1rem;
-    border-top: 0.1rem solid $mainColor;
-    border-bottom: 0.1rem solid $mainColor;
+    /*border-top: 0.1rem solid $mainColor;*/
+    /*border-bottom: 0.1rem solid $mainColor;*/
   }
   
   &-headerBox {
