--- a/public/main.scss
+++ b/public/main.scss
@@ -244,6 +244,10 @@ Lato:400,300|Oswald:400,300|Lora' rel='stylesheet' type='text/css'>https://fonts
       }
       transition: $transitionSpeed font-weight ease-in-out;
     }
+    p {
+      margin: 0 auto;
+    }
+    
     text-align: center;
   }
 
