[features] add viewport settings back in, style changes

--- a/public/main.css
+++ b/public/main.css
@@ -120,6 +120,8 @@ Lato:400,300|Oswald:400,300|Lora' rel='stylesheet' type='text/css'>https://fonts
   max-width: 60rem;
   margin: 0 auto; }
   .Index-info {
+    margin: 0 auto;
+    width: 60%;
     /*font-family: 'Lato', sans-serif;*/
     /*font-weight: 300;*/
     padding: 0.5rem 0;
@@ -151,8 +153,11 @@ Lato:400,300|Oswald:400,300|Lora' rel='stylesheet' type='text/css'>https://fonts
   .Index-subheader {
     line-height: 1;
     text-align: center; }
-  .Index-voiceDemo .DemoWidget {
-    margin: 5px 0; }
+  .Index-voiceDemo {
+    width: 60%;
+    margin: 0 auto; }
+    .Index-voiceDemo .DemoWidget {
+      margin: 5px 0; }
   .Index-contact {
     text-align: center; }
     .Index-contact a {
