--- a/public/main.scss
+++ b/public/main.scss
@@ -149,7 +149,7 @@ h2 {
 
   &-siteImage {
     position: relative;
-    display: inline;
+    display: inline-block;
     width: auto;
     vertical-align: bottom;
     margin-right: 25px;
@@ -198,14 +198,14 @@ h2 {
     text-align: center;
     .socialMediaIcons {
       &-icon {
-        border-radius: 5px;
+        border-radius: 50%;
       }
     }
     .socialMediaIcons {
       &-icon {
         &--overlay { 
           margin: 5px;
-          border-radius: 5px;
+          border-radius: 50%;
           display: inline-block;
           vertical-align: top;
           &:hover {
@@ -276,9 +276,13 @@ h2 {
 
   @media only screen and (min-width: 416px) and (max-width : 555px) {
     &-siteImage {
-      display: inline;
+      background-image: url('../assets/taejinlogocropped_small.png');
+      background-repeat: no-repeat;
+      width: 57px;
       height: 45px;
+      bottom: 3px;
     }
+
 
     &-header {
       display: inline;
@@ -314,9 +318,11 @@ h2 {
 
   @media only screen and (min-width : 556px) and (max-width: 809px) {
     &-siteImage {
-      position: relative;
-      top: -1px;
-      height: 3.75rem;
+      background-image: url('../assets/taejinlogocropped_medium.png');
+      background-repeat: no-repeat;
+      width: 86px;
+      height: 68px;
+      bottom: 3px;
     }
 
     &-header {
@@ -358,8 +364,11 @@ h2 {
 
   @media only screen and (min-width : 810px) {
     &-siteImage {
-      top: -1.5px;
-      height: 4.75rem;
+      background-image: url('../assets/taejinlogocropped_large.png');
+      background-repeat: no-repeat;
+      width: 109px;
+      height: 86px;
+      bottom: 3px;
     }
 
     &-header {
