--- a/public/main.scss
+++ b/public/main.scss
@@ -17,6 +17,12 @@ $smallSpacing: $medium * $spacingMultiplier;
 $handheld: $small * $breakpointMultiplier;
 $handheldSpacing: $small * $spacingMultiplier;
 
+$indexWidthLarge: 42rem;
+$indexWidthMedium: $indexWidthLarge * $breakpointMultiplier;
+$indexWidthSmall: $indexWidthMedium * $breakpointMultiplier;
+$indexWidthHandheld: $indexWidthSmall * $breakpointMultiplier;
+
+
 $fontLarge: 1.1rem;
 $fontMedium: $fontLarge * $fontBreakpointMultiplier;
 $fontSmall: $fontMedium * $fontBreakpointMultiplier;
@@ -34,7 +40,8 @@ $iframeHandheld: $iframeSmall * $iframeBreakpointMultiplier;
 
 $transitionSpeed: 0.1s;
 
-$mainColor: #33adff;
+$mainColor: #59493d;
+$secondaryColor: #59493d;
 $headerColor: #222222;
 
 @font-face {
@@ -91,6 +98,12 @@ src:url(data:font/opentype;base64,d09GMk9UVE8AAIPAABAAAAAA1tQAAINdAAIDlQAAAAAAAA
 font-style:normal;font-weight:700;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
 html {
   font-size: $fontSize;
   -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
@@ -98,10 +111,16 @@ html {
   color: #111111;
 }
 
+body {
+  background-color: #7fd0bb;
+}
+
 a {
   text-decoration: none;
   cursor: pointer;
-  color: $mainColor;
+  color: #7fd0bb;
+  font-weight: bolder;
+  font-size: 1.25rem;
 }
 
 span {
@@ -117,6 +136,8 @@ h2 {
   color: $headerColor;
 }
 .Index {
+  width: $indexWidthLarge;
+  background-color: #e2edb6;
   font-family: 'proxima-nova', serif;
   font-weight: 300;
   max-width: $maxWidth;
@@ -226,6 +247,8 @@ h2 {
 
 
   @media only screen and (max-width : 415px) {
+    max-width: $indexWidthHandheld;
+
     &-siteImage {
       display: none;
       height: 2.25rem;
@@ -275,6 +298,8 @@ h2 {
   }
 
   @media only screen and (min-width: 416px) and (max-width : 555px) {
+    max-width: $indexWidthSmall;
+
     &-siteImage {
       background-image: url('../assets/taejinlogocropped_small.png');
       background-repeat: no-repeat;
@@ -317,6 +342,8 @@ h2 {
   }
 
   @media only screen and (min-width : 556px) and (max-width: 809px) {
+    max-width: $indexWidthMedium;
+
     &-siteImage {
       background-image: url('../assets/taejinlogocropped_medium.png');
       background-repeat: no-repeat;
@@ -363,6 +390,8 @@ h2 {
   }
 
   @media only screen and (min-width : 810px) {
+    max-width: $indexWidthLarge;
+
     &-siteImage {
       background-image: url('../assets/taejinlogocropped_large.png');
       background-repeat: no-repeat;
