[features] style fixes, reduce the number of smooth scroll links to reduce clutter, make the sizes of the links match the text

--- a/public/main.css
+++ b/public/main.css
@@ -79,7 +79,8 @@ h2 {
   font-family: 'proxima-nova', serif;
   font-weight: 300;
   max-width: 60rem;
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding-bottom: 2rem; }
   .Index-info {
     text-align: center;
     margin: 0 auto;
