--- a/public/main.scss
+++ b/public/main.scss
@@ -141,6 +141,7 @@ h2 {
   font-weight: 300;
   max-width: $maxWidth;
   margin: 0 auto;
+  padding-bottom: 2rem;
   &-info {
     text-align: center;
     margin: 0 auto;
