--- a/public/main.css
+++ b/public/main.css
@@ -28,10 +28,6 @@ a {
   color: #7fd0bb;
   font-weight: bolder; }
 
-span {
-  font-weight: bolder;
-  color: #59493d; }
-
 h1 {
   color: #222222; }
 
@@ -50,6 +46,9 @@ h2 {
   overflow: visible;
   margin: 0 auto;
   padding-bottom: 2rem; }
+  .Index .secondaryText {
+    font-weight: bolder;
+    color: #59493d; }
   .Index-info {
     font-weight: lighter;
     margin: 0 auto;
@@ -92,6 +91,12 @@ h2 {
       margin: 5px 0; }
   .Index-contact {
     text-align: center; }
+    .Index-contact.unhighlighted span {
+      background: none;
+      transition: 0.2s background ease-in-out; }
+    .Index-contact.highlight span {
+      background: #7fd0bb;
+      transition: 0.2s background ease-in-out; }
     .Index-contact a {
       transition: 0.1s font-weight ease-in-out; }
       .Index-contact a:hover {
