--- a/public/main.scss
+++ b/public/main.scss
@@ -52,6 +52,12 @@ $headerColor: #222222;
   font-style:normal;font-weight:400;
 }
 
+// @font-face {
+//   font-family:"mont";
+//   src:url('../fonts/mont.woff2');
+//   font-style:normal;font-weight:400;
+// }
+
 
 html, body {
   width: 100%;
@@ -63,7 +69,6 @@ html {
   font-size: $fontSize;
   -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
   -webkit-font-smoothing: antialiased;
-  color: #111111;
 }
 
 body {
@@ -105,6 +110,8 @@ h2 {
   }
 
   &-info {
+    max-width: 36rem;
+    color: $mainColor;
     font-weight: lighter;
     margin: 0 auto;
     width: 60%;
@@ -165,6 +172,7 @@ h2 {
   }
 
   &-contact {
+    color: $mainColor;
 
     &.unhighlighted {
       span {
@@ -175,6 +183,7 @@ h2 {
 
     &.highlight {
       span {
+        color: $mainColor;
         background: $secondaryColor;
         transition: $transitionSpeed * 2 background ease-in-out;
       }
